reference/5.1/Microsoft.PowerShell.Management/Copy-ItemProperty.md
---
external help file: Microsoft.PowerShell.Commands.Management.dll-Help.xml
keywords: powershell,コマンドレット
Locale: en-US
Module Name: Microsoft.PowerShell.Management
ms.date: 10/18/2018
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.management/copy-itemproperty?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Copy-ItemProperty
ms.openlocfilehash: 7af5a414a84bad8048c997803c94c0d94e549989
ms.sourcegitcommit: 9b28fb9a3d72655bb63f62af18b3a5af6a05cd3f
ms.translationtype: MT
ms.contentlocale: ja-JP
ms.lasthandoff: 07/07/2020
ms.locfileid: "93215539"
---
# <span data-ttu-id="3f0be-103">Copy-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="3f0be-103">Copy-ItemProperty</span></span>

## <span data-ttu-id="3f0be-104">概要</span><span class="sxs-lookup"><span data-stu-id="3f0be-104">SYNOPSIS</span></span>

<span data-ttu-id="3f0be-105">プロパティとその値を、指定された場所から別の場所へコピーします。</span><span class="sxs-lookup"><span data-stu-id="3f0be-105">Copies a property and value from a specified location to another location.</span></span>

## <span data-ttu-id="3f0be-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="3f0be-106">SYNTAX</span></span>

### <span data-ttu-id="3f0be-107">パス (既定値)</span><span class="sxs-lookup"><span data-stu-id="3f0be-107">Path (Default)</span></span>

```
Copy-ItemProperty [-Path] <String[]> [-Name] <String> [-Destination] <String> [-PassThru] [-Force]
 [-Filter <String>] [-Include <String[]>] [-Exclude <String[]>] [-Credential <PSCredential>] [-WhatIf]
 [-Confirm] [-UseTransaction] [<CommonParameters>]
```

### <span data-ttu-id="3f0be-108">LiteralPath</span><span class="sxs-lookup"><span data-stu-id="3f0be-108">LiteralPath</span></span>

```
Copy-ItemProperty -LiteralPath <String[]> [-Name] <String> [-Destination] <String> [-PassThru] [-Force]
 [-Filter <String>] [-Include <String[]>] [-Exclude <String[]>] [-Credential <PSCredential>] [-WhatIf]
 [-Confirm] [-UseTransaction] [<CommonParameters>]
```

## <span data-ttu-id="3f0be-109">Description</span><span class="sxs-lookup"><span data-stu-id="3f0be-109">DESCRIPTION</span></span>

<span data-ttu-id="3f0be-110">`Copy-ItemProperty`コマンドレットは、プロパティと値を指定した場所から別の場所にコピーします。</span><span class="sxs-lookup"><span data-stu-id="3f0be-110">The `Copy-ItemProperty` cmdlet copies a property and value from a specified location to another location.</span></span>
<span data-ttu-id="3f0be-111">たとえば、このコマンドレットを使用すると、1つのレジストリキーから別のレジストリキーに1つ以上のレジストリエントリをコピーできます。</span><span class="sxs-lookup"><span data-stu-id="3f0be-111">For instance, you can use this cmdlet to copy one or more registry entries from one registry key to another registry key.</span></span>

## <span data-ttu-id="3f0be-112">例</span><span class="sxs-lookup"><span data-stu-id="3f0be-112">EXAMPLES</span></span>

### <span data-ttu-id="3f0be-113">例 1: レジストリキーから別のレジストリキーにプロパティをコピーする</span><span class="sxs-lookup"><span data-stu-id="3f0be-113">Example 1: Copy a property from a registry key to another registry key</span></span>

<span data-ttu-id="3f0be-114">このコマンドは、"T.myproperty" という名前のプロパティを "MyApplication" レジストリキーから "MyApplicationRev2" レジストリキーにコピーします。</span><span class="sxs-lookup"><span data-stu-id="3f0be-114">This command copies the property named "MyProperty" from the "MyApplication" registry key to the "MyApplicationRev2" registry key.</span></span>

```powershell
Copy-ItemProperty -Path "MyApplication" -Destination "HKLM:\Software\MyApplicationRev2" -Name "MyProperty"
```

## <span data-ttu-id="3f0be-115">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="3f0be-115">PARAMETERS</span></span>

### <span data-ttu-id="3f0be-116">-Credential</span><span class="sxs-lookup"><span data-stu-id="3f0be-116">-Credential</span></span>

<span data-ttu-id="3f0be-117">この処理を実行するアクセス許可を持つユーザー アカウントを指定します。</span><span class="sxs-lookup"><span data-stu-id="3f0be-117">Specifies a user account that has permission to perform this action.</span></span>
<span data-ttu-id="3f0be-118">既定値は現在のユーザーです。</span><span class="sxs-lookup"><span data-stu-id="3f0be-118">The default is the current user.</span></span>

<span data-ttu-id="3f0be-119">「User01」や「Domain01\User01」のようなユーザー名を入力するか、  コマンドレットで生成されるような `Get-Credential` オブジェクトを入力します。</span><span class="sxs-lookup"><span data-stu-id="3f0be-119">Type a user name, such as "User01" or "Domain01\User01", or enter a **PSCredential** object, such as one generated by the `Get-Credential` cmdlet.</span></span>
<span data-ttu-id="3f0be-120">ユーザー名を入力すると、パスワードの入力を求めるメッセージが表示されます。</span><span class="sxs-lookup"><span data-stu-id="3f0be-120">If you type a user name, you are prompted for a password.</span></span>

> [!WARNING]
> <span data-ttu-id="3f0be-121">このパラメーターは、Windows PowerShell でインストールされるプロバイダーではサポートされていません。</span><span class="sxs-lookup"><span data-stu-id="3f0be-121">This parameter is not supported by any providers installed with Windows PowerShell.</span></span>

```yaml
Type: System.Management.Automation.PSCredential
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: Current user
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="3f0be-122">-Destination</span><span class="sxs-lookup"><span data-stu-id="3f0be-122">-Destination</span></span>

<span data-ttu-id="3f0be-123">移動先のパスを指定します。</span><span class="sxs-lookup"><span data-stu-id="3f0be-123">Specifies the path to the destination location.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: True
Position: 1
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="3f0be-124">-除外</span><span class="sxs-lookup"><span data-stu-id="3f0be-124">-Exclude</span></span>

<span data-ttu-id="3f0be-125">このコマンドレットによって除外される項目を文字列配列として指定します。</span><span class="sxs-lookup"><span data-stu-id="3f0be-125">Specifies, as a string array, an item or items that this cmdlet excludes.</span></span>
<span data-ttu-id="3f0be-126">このパラメーターの値は、 **Path** パラメーターを修飾します。</span><span class="sxs-lookup"><span data-stu-id="3f0be-126">The value of this parameter qualifies the **Path** parameter.</span></span>
<span data-ttu-id="3f0be-127">「\*.txt」などのパス要素またはパターンを入力します。</span><span class="sxs-lookup"><span data-stu-id="3f0be-127">Enter a path element or pattern, such as "\*.txt".</span></span>
<span data-ttu-id="3f0be-128">ワイルドカード文字を使用できます。</span><span class="sxs-lookup"><span data-stu-id="3f0be-128">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="3f0be-129">-Filter</span><span class="sxs-lookup"><span data-stu-id="3f0be-129">-Filter</span></span>

<span data-ttu-id="3f0be-130">プロバイダーの形式または言語でフィルターを指定します。</span><span class="sxs-lookup"><span data-stu-id="3f0be-130">Specifies a filter in the format or language of the provider.</span></span>
<span data-ttu-id="3f0be-131">このパラメーターの値は、 **Path** パラメーターを修飾します。</span><span class="sxs-lookup"><span data-stu-id="3f0be-131">The value of this parameter qualifies the **Path** parameter.</span></span>

<span data-ttu-id="3f0be-132">ワイルドカード文字の使用など、フィルターの構文はプロバイダーによって異なります。</span><span class="sxs-lookup"><span data-stu-id="3f0be-132">The syntax of the filter, including the use of wildcard characters, depends on the provider.</span></span>
<span data-ttu-id="3f0be-133">フィルターは他のパラメーターよりも効率的です。これは、取得後にオブジェクトを PowerShell でフィルター処理するのではなく、コマンドレットがオブジェクトを取得するときに、フィルターが適用されるためです。</span><span class="sxs-lookup"><span data-stu-id="3f0be-133">Filters are more efficient than other parameters, because the provider applies them when the cmdlet gets the objects rather than having PowerShell filter the objects after they are retrieved.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="3f0be-134">-Force</span><span class="sxs-lookup"><span data-stu-id="3f0be-134">-Force</span></span>

<span data-ttu-id="3f0be-135">ユーザーに確認せずに、直ちにコマンドを実行します。</span><span class="sxs-lookup"><span data-stu-id="3f0be-135">Forces the command to run without asking for user confirmation.</span></span>
<span data-ttu-id="3f0be-136">実装はプロバイダーごとに異なります。</span><span class="sxs-lookup"><span data-stu-id="3f0be-136">Implementation varies from provider to provider.</span></span>
<span data-ttu-id="3f0be-137">詳細については、「[about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="3f0be-137">For more information, see [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="3f0be-138">-Include</span><span class="sxs-lookup"><span data-stu-id="3f0be-138">-Include</span></span>

<span data-ttu-id="3f0be-139">文字列配列として、このコマンドレットによって操作に含まれる項目を指定します。</span><span class="sxs-lookup"><span data-stu-id="3f0be-139">Specifies, as a string array, an item or items that this cmdlet includes in the operation.</span></span>
<span data-ttu-id="3f0be-140">このパラメーターの値は、 **Path** パラメーターを修飾します。</span><span class="sxs-lookup"><span data-stu-id="3f0be-140">The value of this parameter qualifies the **Path** parameter.</span></span>
<span data-ttu-id="3f0be-141">「\*.txt」などのパス要素またはパターンを入力します。</span><span class="sxs-lookup"><span data-stu-id="3f0be-141">Enter a path element or pattern, such as "\*.txt".</span></span>
<span data-ttu-id="3f0be-142">ワイルドカード文字を使用できます。</span><span class="sxs-lookup"><span data-stu-id="3f0be-142">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="3f0be-143">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="3f0be-143">-LiteralPath</span></span>

<span data-ttu-id="3f0be-144">プロパティの現在の場所のパスを指定します。</span><span class="sxs-lookup"><span data-stu-id="3f0be-144">Specifies the path to the current location of the property.</span></span>
<span data-ttu-id="3f0be-145">**Path** パラメーターと異なり、 **LiteralPath** の値は入力したとおりに使用されます。</span><span class="sxs-lookup"><span data-stu-id="3f0be-145">Unlike the **Path** parameter, the value of **LiteralPath** is used exactly as it is typed.</span></span>
<span data-ttu-id="3f0be-146">ワイルドカードとして解釈される文字はありません。</span><span class="sxs-lookup"><span data-stu-id="3f0be-146">No characters are interpreted as wildcards.</span></span>
<span data-ttu-id="3f0be-147">パスにエスケープ文字が含まれている場合は、単一引用符で囲みます。</span><span class="sxs-lookup"><span data-stu-id="3f0be-147">If the path includes escape characters, enclose it in single quotation marks.</span></span>
<span data-ttu-id="3f0be-148">単一引用符で囲まれた文字はエスケープシーケンスとして解釈されません。</span><span class="sxs-lookup"><span data-stu-id="3f0be-148">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String[]
Parameter Sets: LiteralPath
Aliases: PSPath

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="3f0be-149">-Name</span><span class="sxs-lookup"><span data-stu-id="3f0be-149">-Name</span></span>

<span data-ttu-id="3f0be-150">コピーするプロパティの名前を指定します。</span><span class="sxs-lookup"><span data-stu-id="3f0be-150">Specifies the name of the property to be copied.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases: PSProperty

Required: True
Position: 2
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="3f0be-151">-PassThru</span><span class="sxs-lookup"><span data-stu-id="3f0be-151">-PassThru</span></span>

<span data-ttu-id="3f0be-152">作業中の項目を表すオブジェクトを返します。</span><span class="sxs-lookup"><span data-stu-id="3f0be-152">Returns an object representing the item with which you are working.</span></span>
<span data-ttu-id="3f0be-153">既定では、このコマンドレットによる出力はありません。</span><span class="sxs-lookup"><span data-stu-id="3f0be-153">By default, this cmdlet does not generate any output.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="3f0be-154">-Path</span><span class="sxs-lookup"><span data-stu-id="3f0be-154">-Path</span></span>

<span data-ttu-id="3f0be-155">文字列配列として、コピーするプロパティへのパスを指定します。</span><span class="sxs-lookup"><span data-stu-id="3f0be-155">Specifies, as a string array, the path to the property to be copied.</span></span>

```yaml
Type: System.String[]
Parameter Sets: Path
Aliases:

Required: True
Position: 0
Default value: None
Accept pipeline input: True (ByPropertyName, ByValue)
Accept wildcard characters: False
```

### <span data-ttu-id="3f0be-156">-UseTransaction</span><span class="sxs-lookup"><span data-stu-id="3f0be-156">-UseTransaction</span></span>
<span data-ttu-id="3f0be-157">アクティブなトランザクションのコマンドが含まれます。</span><span class="sxs-lookup"><span data-stu-id="3f0be-157">Includes the command in the active transaction.</span></span>
<span data-ttu-id="3f0be-158">このパラメーターは、トランザクションが進行中の場合のみ有効です。</span><span class="sxs-lookup"><span data-stu-id="3f0be-158">This parameter is valid only when a transaction is in progress.</span></span>
<span data-ttu-id="3f0be-159">詳細については、「about_Transactions」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="3f0be-159">For more information, see about_Transactions.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: usetx

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="3f0be-160">-Confirm</span><span class="sxs-lookup"><span data-stu-id="3f0be-160">-Confirm</span></span>
<span data-ttu-id="3f0be-161">コマンドレットの実行前に確認を求めるメッセージが表示されます。</span><span class="sxs-lookup"><span data-stu-id="3f0be-161">Prompts you for confirmation before running the cmdlet.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: cf

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="3f0be-162">-WhatIf</span><span class="sxs-lookup"><span data-stu-id="3f0be-162">-WhatIf</span></span>

<span data-ttu-id="3f0be-163">コマンドレットの実行時に発生する内容を示します。</span><span class="sxs-lookup"><span data-stu-id="3f0be-163">Shows what would happen if the cmdlet runs.</span></span>
<span data-ttu-id="3f0be-164">このコマンドレットは実行されません。</span><span class="sxs-lookup"><span data-stu-id="3f0be-164">The cmdlet is not run.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: wi

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="3f0be-165">共通パラメーター</span><span class="sxs-lookup"><span data-stu-id="3f0be-165">CommonParameters</span></span>

<span data-ttu-id="3f0be-166">このコマンドレットは、、、、、、、、、、、およびの共通パラメーターをサポートしてい `-Debug` `-ErrorAction` `-ErrorVariable` `-InformationAction` `-InformationVariable` `-OutVariable` `-OutBuffer` `-PipelineVariable` `-Verbose` `-WarningAction` `-WarningVariable` ます。</span><span class="sxs-lookup"><span data-stu-id="3f0be-166">This cmdlet supports the common parameters: `-Debug`, `-ErrorAction`, `-ErrorVariable`, `-InformationAction`, `-InformationVariable`, `-OutVariable`, `-OutBuffer`, `-PipelineVariable`, `-Verbose`, `-WarningAction`, and `-WarningVariable`.</span></span> <span data-ttu-id="3f0be-167">詳細については、「[about_CommonParameters](../Microsoft.PowerShell.Core/About/about_CommonParameters.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="3f0be-167">For more information, see [about_CommonParameters](../Microsoft.PowerShell.Core/About/about_CommonParameters.md).</span></span>

## <span data-ttu-id="3f0be-168">入力</span><span class="sxs-lookup"><span data-stu-id="3f0be-168">INPUTS</span></span>

### <span data-ttu-id="3f0be-169">System.String</span><span class="sxs-lookup"><span data-stu-id="3f0be-169">System.String</span></span>

<span data-ttu-id="3f0be-170">パイプを使用して、このコマンドレットへのパスを含む文字列をパイプすることができます。</span><span class="sxs-lookup"><span data-stu-id="3f0be-170">You can pipe a string that contains a path to this cmdlet.</span></span>

## <span data-ttu-id="3f0be-171">出力</span><span class="sxs-lookup"><span data-stu-id="3f0be-171">OUTPUTS</span></span>

### <span data-ttu-id="3f0be-172">なしまたはシステムの管理. PSCustomObject</span><span class="sxs-lookup"><span data-stu-id="3f0be-172">None or System.Management.Automation.PSCustomObject</span></span>

<span data-ttu-id="3f0be-173">**Passthru** パラメーターを使用すると、このコマンドレットは、コピーされた項目プロパティを表す **pscustomobject** 生成します。</span><span class="sxs-lookup"><span data-stu-id="3f0be-173">When you use the **Passthru** parameter, this cmdlet generates a **PsCustomObject** representing the copied item property.</span></span>
<span data-ttu-id="3f0be-174">それ以外の場合、このコマンドレットによる出力はありません。</span><span class="sxs-lookup"><span data-stu-id="3f0be-174">Otherwise, this cmdlet does not generate any output.</span></span>

## <span data-ttu-id="3f0be-175">注</span><span class="sxs-lookup"><span data-stu-id="3f0be-175">NOTES</span></span>

<span data-ttu-id="3f0be-176">このコマンドレットは、プロバイダーによって公開されるデータを使用するように設計されています。</span><span class="sxs-lookup"><span data-stu-id="3f0be-176">This cmdlet is designed to work with the data exposed by any provider.</span></span> <span data-ttu-id="3f0be-177">セッションで使用可能なプロバイダーの一覧を表示するには、「」と入力 `Get-PSProvider` します。</span><span class="sxs-lookup"><span data-stu-id="3f0be-177">To list the providers available in your session, type `Get-PSProvider`.</span></span> <span data-ttu-id="3f0be-178">詳細については、「about_Providers」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="3f0be-178">For more information, see about_Providers.</span></span>

## <span data-ttu-id="3f0be-179">関連リンク</span><span class="sxs-lookup"><span data-stu-id="3f0be-179">RELATED LINKS</span></span>

[<span data-ttu-id="3f0be-180">Clear-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="3f0be-180">Clear-ItemProperty</span></span>](Clear-ItemProperty.md)

[<span data-ttu-id="3f0be-181">Get-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="3f0be-181">Get-ItemProperty</span></span>](Get-ItemProperty.md)

[<span data-ttu-id="3f0be-182">Move-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="3f0be-182">Move-ItemProperty</span></span>](Move-ItemProperty.md)

[<span data-ttu-id="3f0be-183">New-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="3f0be-183">New-ItemProperty</span></span>](New-ItemProperty.md)

[<span data-ttu-id="3f0be-184">Rename-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="3f0be-184">Rename-ItemProperty</span></span>](Rename-ItemProperty.md)

[<span data-ttu-id="3f0be-185">Set-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="3f0be-185">Set-ItemProperty</span></span>](Set-ItemProperty.md)

[<span data-ttu-id="3f0be-186">Get-PSProvider</span><span class="sxs-lookup"><span data-stu-id="3f0be-186">Get-PSProvider</span></span>](Get-PSProvider.md)
